--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "pack/jhejderup/start/tabular"]
 	path = pack/jhejderup/start/tabular
 	url = https://github.com/godlygeek/tabular.git
+[submodule "pack/jhejderup/start/vim-markdown"]
+	path = pack/jhejderup/start/vim-markdown
+	url = https://github.com/plasticboy/vim-markdown.git
